$Id: ChangeLog,v 1.19 2004/03/21 12:40:12 h_oudejans Exp $

2004-03-21 Manuel Bilderbeek <manuel@msxnet.org>
	* removed Mute button from MiscControls, made the new one in
	  AudioControls functional
	* some code layout clean ups
	* set status properly during hidden launch

2004-03-21 Herman Oudejans <hn.oudejans@quicknet.nl>
	* use openmsx_info sounddevice <device> to query the devicetype.
	* Moonsound devices are now noted as stereo.
	* linux comboboxwidth in audiomixer is for now fixed on 40 pixels.

2004-03-20 Manuel Bilderbeek <manuel@msxnet.org>
	* added frames per second display in status bar
	* set status in status bar (could be expanded)

2004-03-19 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added audiocontrolspage
	* fixed volume (voor devices containing a space)
	* fixed compile error in linux

2004-03-06 Maarten ter Huurne <maarten@treewalker.org>
	* Moved build files to a subdir named "build".
	* Define RESOURCEDIR from within build process.
	  For the time being, developers should edit "build/config.mk" and set
	  INSTALL_BASE to "<catapult_dir>/derived".

2004-03-03 Herman Oudejans <hn.oudejans@quicknet.nl>
	* adapted for openmsx cvs Changelog version 1.1156 (openmsx_info 
	  command output is now a tcl-list).

2004-02-27 Herman Oudejans <hn.oudejans@quicknet.nl>
	* fixed a sync error when querying the settings

2004-02-12 Herman Oudejans <hn.oudejans@quicknet.nl>
	* When RESOURCEDIR is defined, catapult will use this as the 
	  basedirectory for the resources.
	* Suppressed output when launching openMSX in hidden mode
	* When used with openMSX 0.3.4 release, catapult will now filter
	  excessive information from the set command reply if set is used 
	  to query the current value.

2004-02-08 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Make renderers and scalers dynamicly
	* Catapult now asks all needed settings from openMSX

2004-02-07 Maarten ter Huurne <maarten@treewalker.org>
	* Integrated dependency checking from openMSX alternative.mk.