@@ -1,4 +1,4 @@
-// $Id: openMSXController.cpp,v 1.11 2004/03/21 12:40:12 h_oudejans Exp $
+// $Id: openMSXController.cpp,v 1.12 2004/03/21 13:50:14 manuelbi Exp $
 // openMSXController.cpp: implementation of the openMSXController class.
 //
 //////////////////////////////////////////////////////////////////////
@@ -150,20 +150,34 @@ void openMSXController::HandleParsedOutput(wxCommandEvent &event)
 							}
 							else{
 								wxString command = GetPendingCommand();
-								if (command == GetInfoCommand("fps")) m_appWindow->SetFPSdisplay(data->contents);
+								if (command == GetInfoCommand("fps")){
+									m_appWindow->SetFPSdisplay(data->contents);
+								}
 							}
 							break;
 						case CatapultXMLParser::REPLY_NOK:
-							m_appWindow->m_statusPage->m_outputtext->SetDefaultStyle(wxTextAttr(wxColour(174,0,0),wxNullColour,wxFont(10,wxMODERN,wxNORMAL,wxBOLD)));
-							m_appWindow->m_statusPage->m_outputtext->AppendText(_("Warning: NOK received on command: "));
-							m_appWindow->m_statusPage->m_outputtext->AppendText(GetPendingCommand());
-							m_appWindow->m_statusPage->m_outputtext->AppendText(_("\n"));
-							if (!data->contents.IsEmpty()){
-								m_appWindow->m_statusPage->m_outputtext->AppendText(_("contents = "));
-								m_appWindow->m_statusPage->m_outputtext->AppendText(data->contents);
-								m_appWindow->m_statusPage->m_outputtext->AppendText(_("\n"));
+							{
+								wxString command = GetPendingCommand();
+								if (command == GetInfoCommand("fps")){
+									// just ignore (old version)
+								}
+								else if (command == _("set master_volume")) {
+									m_appWindow->m_audioControlPage->DisableMasterVolume();
+									WriteCommand (wxString(_("set ") + m_appWindow->m_audioControlPage->GetAudioChannelName(1)+("_volume")));
+								}
+								else {
+									m_appWindow->m_statusPage->m_outputtext->SetDefaultStyle(wxTextAttr(wxColour(174,0,0),wxNullColour,wxFont(10,wxMODERN,wxNORMAL,wxBOLD)));
+									m_appWindow->m_statusPage->m_outputtext->AppendText(_("Warning: NOK received on command: "));
+									m_appWindow->m_statusPage->m_outputtext->AppendText(command);
+									m_appWindow->m_statusPage->m_outputtext->AppendText(_("\n"));
+									if (!data->contents.IsEmpty()){
+										m_appWindow->m_statusPage->m_outputtext->AppendText(_("contents = "));
+										m_appWindow->m_statusPage->m_outputtext->AppendText(data->contents);
+										m_appWindow->m_statusPage->m_outputtext->AppendText(_("\n"));
+									}
+								}
+								break;
 							}
-							break;
 						case CatapultXMLParser::REPLY_UNKNOWN:
 							m_appWindow->m_statusPage->m_outputtext->SetDefaultStyle(wxTextAttr(wxColour(174,0,0),wxNullColour,wxFont(10,wxMODERN,wxNORMAL,wxBOLD)));
 							m_appWindow->m_statusPage->m_outputtext->AppendText(_("Warning: Unknown reply received!\n"));
@@ -241,7 +255,7 @@ void openMSXController::HandleHiddenLaunchReply(wxCommandEvent &event)
 				if (data->contents.Find("\n") == -1){
 					m_infoCommand = _("openmsx_info_tcl");	
 				}
-				WriteCommand(_("quit"));
+				WriteCommand(_("set master_volume"));
 				break;
 			case CatapultXMLParser::REPLY_NOK:
 				WriteCommand("info");
@@ -254,7 +268,7 @@ void openMSXController::HandleHiddenLaunchReply(wxCommandEvent &event)
 		switch (data->replyState) {
 			case CatapultXMLParser::REPLY_OK:
 				m_infoCommand = _("info");
-				WriteCommand(_("quit"));
+				WriteCommand(_("set master_volume"));
 				break;
 			case CatapultXMLParser::REPLY_NOK:
 				wxMessageBox (_("Please update openMSX to 0.3.3 or higher"));
@@ -263,6 +277,25 @@ void openMSXController::HandleHiddenLaunchReply(wxCommandEvent &event)
 			default:
 				break;
 		}
+	}
+	else if (command == _("set master_volume")){
+		if (data->replyState == CatapultXMLParser::REPLY_NOK){
+			m_appWindow->m_audioControlPage->DisableMasterVolume();
+		}
+		WriteCommand(_("unset"));
+	}
+	else if (command == _("unset")){
+		switch (data->replyState) {
+			case CatapultXMLParser::REPLY_OK:
+				m_unsetCommand = _("unset");
+				break;
+			case CatapultXMLParser::REPLY_NOK:
+				m_unsetCommand = _("restoredefault");
+				break;
+			default:
+				break;
+		}
+		WriteCommand (_("quit"));
 	}
 	else if (command == _("quit")){
 		m_launchMode = LAUNCH_NONE;
@@ -278,99 +311,121 @@ void openMSXController::HandleNormalLaunchReply(wxCommandEvent &event)
 	wxString command = GetPendingCommand();
 	if (command == GetInfoCommand(_("renderer"))){
 		WriteCommand (GetInfoCommand(_("scaler")));
+		TrackAsserts ("Fill rendererers",data->contents); 
 		m_appWindow->m_videoControlPage->FillRenderers(data->contents);		
 	}
 	else if (command == GetInfoCommand(_("scaler"))){
+		TrackAsserts ("Fill scalers",data->contents);
 		WriteCommand (_("set power on"));
 		m_appWindow->m_videoControlPage->FillScalers(data->contents);		
 	}
 	else if (command == _("set power on")){
-		WriteCommand (_("restoredefault renderer"));		
+		WriteCommand (wxString(m_unsetCommand + " renderer"));				
 	}
-	else if (command == _("restoredefault renderer")){
+	else if (command == wxString(m_unsetCommand + " renderer")){
 		WriteCommand (_("set renderer"));
 	}
 	else if (command == _("set renderer")){
+		TrackAsserts ("Set renderer",data->contents);
 		m_appWindow->m_videoControlPage->SetRenderer(FilterCurrentValue(data->contents));
 		WriteCommand (_("set scaler"));
 	}
 	else if (command == _("set scaler")){
+		TrackAsserts ("Set scaler",data->contents);
 		m_appWindow->m_videoControlPage->SetScaler(FilterCurrentValue(data->contents));
 		WriteCommand (_("set accuracy"));
 	}
 	else if (command == _("set accuracy")){
+		TrackAsserts ("Set Accuracy",data->contents);
 		m_appWindow->m_videoControlPage->SetAccuracy(FilterCurrentValue(data->contents));
 		WriteCommand (_("set deinterlace"));
 	}
 	else if (command == _("set deinterlace")){
+		TrackAsserts ("Set deinterlace",data->contents);
 		m_appWindow->m_videoControlPage->SetDeinterlace(FilterCurrentValue(data->contents));
 		WriteCommand (_("set limitsprites"));
 	}
 	else if (command == _("set limitsprites")){
+		TrackAsserts ("Set limitsprites",data->contents);
 		m_appWindow->m_videoControlPage->SetLimitSprites(FilterCurrentValue(data->contents));
 		WriteCommand (_("set blur"));
 	}
 	else if (command == _("set blur")){
+		TrackAsserts ("Set blur",data->contents);
 		m_appWindow->m_videoControlPage->SetBlur(FilterCurrentValue(data->contents));
 		WriteCommand (_("set glow"));
 	}
 	else if (command == _("set glow")){
+		TrackAsserts ("Set glow",data->contents);
 		m_appWindow->m_videoControlPage->SetGlow(FilterCurrentValue(data->contents));
 		WriteCommand (_("set gamma"));
 	}
 	else if (command == _("set gamma")){
+		TrackAsserts ("Set gamma",data->contents);
 		m_appWindow->m_videoControlPage->SetGamma(FilterCurrentValue(data->contents));
 		WriteCommand (_("set scanline"));
 	}
 	else if (command == _("set scanline")){
+		TrackAsserts ("Set scanline",data->contents);
 		m_appWindow->m_videoControlPage->SetScanline(FilterCurrentValue(data->contents));
 		WriteCommand (_("set speed"));
 	}
 	else if (command == _("set speed")){
+		TrackAsserts ("Set speed",data->contents);
 		m_appWindow->m_miscControlPage->SetSpeed(FilterCurrentValue(data->contents));
 		WriteCommand (_("set frameskip"));
 	}
 	else if (command == _("set frameskip")){
+		TrackAsserts ("set frameskip",data->contents);
 		m_appWindow->m_miscControlPage->SetFrameskip(FilterCurrentValue(data->contents));
 		WriteCommand (_("set throttle"));
 	}
 	else if (command == _("set throttle")){
+		TrackAsserts ("set throttle",data->contents);
 		m_appWindow->m_miscControlPage->SetThrottle(FilterCurrentValue(data->contents));
 		WriteCommand (_("set cmdtiming"));
 	}
 	else if (command == _("set cmdtiming")){
+		TrackAsserts ("set cmdtiming",data->contents);
 		m_appWindow->m_miscControlPage->SetCmdTiming(FilterCurrentValue(data->contents));
 		WriteCommand (GetInfoCommand(_("sounddevice")));
 	}
 	else if (command == GetInfoCommand(_("sounddevice"))){
+		TrackAsserts ("info sounddevice",data->contents);
 		m_appWindow->m_audioControlPage->InitAudioChannels(data->contents);
-			WriteCommand (wxString(GetInfoCommand(_("sounddevice ")+m_appWindow->m_audioControlPage->GetAudioChannelName(1))));
+		WriteCommand (wxString(GetInfoCommand(_("sounddevice ")+m_appWindow->m_audioControlPage->GetAudioChannelName(1))));
 	}
 	else if (m_appWindow->m_audioControlPage->GetNumberOfAudioChannels() >0){
 		for (i=0;i<m_appWindow->m_audioControlPage->GetNumberOfAudioChannels()-1;i++){
 			if (command == wxString(_("set ") + m_appWindow->m_audioControlPage->GetAudioChannelName(i)+_("_volume"))){
+				TrackAsserts ("set volume",data->contents);
 				m_appWindow->m_audioControlPage->SetChannelVolume(i,FilterCurrentValue(data->contents));
 				WriteCommand (wxString(_("set ") + m_appWindow->m_audioControlPage->GetAudioChannelName(i+1)+("_volume")));
 			}
 			if (command == wxString(_("set ") + m_appWindow->m_audioControlPage->GetAudioChannelName(i)+_("_mode"))){
+				TrackAsserts ("set soundmode",data->contents);
 				m_appWindow->m_audioControlPage->SetChannelMode(i,FilterCurrentValue(data->contents));
 				WriteCommand (wxString(_("set ") + m_appWindow->m_audioControlPage->GetAudioChannelName(i+1)+("_mode")));
 			}
 			if (command == wxString(GetInfoCommand(_("sounddevice ")+m_appWindow->m_audioControlPage->GetAudioChannelName(i)))){
+				TrackAsserts ("info channel",data->contents);
 				m_appWindow->m_audioControlPage->AddChannelType(i,FilterCurrentValue(data->contents));
-					WriteCommand (wxString(GetInfoCommand(_("sounddevice ")+m_appWindow->m_audioControlPage->GetAudioChannelName(i+1))));
+				WriteCommand (wxString(GetInfoCommand(_("sounddevice ")+m_appWindow->m_audioControlPage->GetAudioChannelName(i+1))));
 			}
 		}
 		if (command == wxString(GetInfoCommand(_("sounddevice ")+m_appWindow->m_audioControlPage->GetAudioChannelName(m_appWindow->m_audioControlPage->GetNumberOfAudioChannels()-1)))){
+			TrackAsserts ("info channel",data->contents);
 			m_appWindow->m_audioControlPage->AddChannelType(m_appWindow->m_audioControlPage->GetNumberOfAudioChannels()-1,FilterCurrentValue(data->contents));
-				m_appWindow->m_audioControlPage->SetupAudioMixer();		
-				WriteCommand (wxString(_("set ") + m_appWindow->m_audioControlPage->GetAudioChannelName(0)+_("_volume")));
+			m_appWindow->m_audioControlPage->SetupAudioMixer();		
+			WriteCommand (wxString(_("set ") + m_appWindow->m_audioControlPage->GetAudioChannelName(0)+_("_volume")));
 		}
 		if (command == wxString(_("set ") + m_appWindow->m_audioControlPage->GetAudioChannelName(m_appWindow->m_audioControlPage->GetNumberOfAudioChannels()-1)+_("_volume"))){
+			TrackAsserts ("set volume",data->contents);
 			m_appWindow->m_audioControlPage->SetChannelVolume(m_appWindow->m_audioControlPage->GetNumberOfAudioChannels()-1,FilterCurrentValue(data->contents));
 			WriteCommand (wxString(_("set ") + m_appWindow->m_audioControlPage->GetAudioChannelName(1)+_("_mode")));
 		}		
 		if (command == wxString(_("set ") + m_appWindow->m_audioControlPage->GetAudioChannelName(m_appWindow->m_audioControlPage->GetNumberOfAudioChannels()-1)+_("_mode"))){
+			TrackAsserts ("set soundmode",data->contents);
 			m_appWindow->m_audioControlPage->SetChannelMode(m_appWindow->m_audioControlPage->GetNumberOfAudioChannels()-1,FilterCurrentValue(data->contents));
 			wxSize tempsize = m_appWindow->GetSize();
 			tempsize.SetHeight(tempsize.GetHeight()+1);
@@ -410,4 +465,17 @@ wxString openMSXController::GetInfoCommand (wxString parameter)
 	}
 	infoCommand = tempCmd + _(" ") + parameter + endCmd;
 	return wxString (infoCommand);
+}
+
+void openMSXController::TrackAsserts (wxString command, wxString result)
+{
+#ifdef _DEBUG
+	m_appWindow->m_statusPage->m_outputtext->AppendText("tracking assert:");
+	m_appWindow->m_statusPage->m_outputtext->AppendText(command);
+	m_appWindow->m_statusPage->m_outputtext->AppendText("==>");
+	wxString res = result;
+	res.Replace("\n"," ",true);
+	m_appWindow->m_statusPage->m_outputtext->AppendText(res);
+	m_appWindow->m_statusPage->m_outputtext->AppendText("\n");
+#endif
 }
