@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.19 2004/03/21 12:40:12 h_oudejans Exp $
+$Id: ChangeLog,v 1.20 2004/03/21 13:50:11 manuelbi Exp $
 
 2004-03-21 Manuel Bilderbeek <manuel@msxnet.org>
 	* removed Mute button from MiscControls, made the new one in
@@ -10,6 +10,9 @@ $Id: ChangeLog,v 1.19 2004/03/21 12:40:12 h_oudejans Exp $
 	* use openmsx_info sounddevice <device> to query the devicetype.
 	* Moonsound devices are now noted as stereo.
 	* linux comboboxwidth in audiomixer is for now fixed on 40 pixels.
+	* When not availble, mastervolume is disabled and sliders are ranged
+	   from 0-32767.
+	* When available, the 'unset' command is used instead of 'restoredefault'
 
 2004-03-20 Manuel Bilderbeek <manuel@msxnet.org>
 	* added frames per second display in status bar
